Tests/a1/reject/25.ul
int main (int x) {
	id [(2,2)];
}